# maximal-lotteries

./: README.md  pyproject.toml  pyrightconfig.json
src/: base.py  linequation.py  lotlot.py  types.py
